--- a/_includes/tfjs.html
+++ b/_includes/tfjs.html
@@ -97,7 +97,7 @@ th {
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Object detection using pre trained model in TensorFlow.js</h1>
+    <h1>Object detection using coco-ssd model in TensorFlow.js</h1>
 
 
     <section id="demos" class="invisible">
